# mcp-knowledge-hub

./: Readme.md  docker-compose.yml
servicenow-mcp/: .env  .gitignore  README.md
servicenow-mcp/examples/: claude_incident_demo.py
sn_mcp_client/: .gitignore  Dockerfile  README.md  config.client.example.json  config.client.ssc.json  config.client.stdio.json  pyproject.toml  requirements.txt
sn_mcp_client/sn_mcp_client/: api_server.py  cli.py  client.py
